--- a/css/style1.css
+++ b/css/style1.css
@@ -88,7 +88,7 @@ nav{
 }
 .boxes{
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content:space-evenly;
     margin-left:5%;
     margin-right: 5%;
