--- a/css/rules.css
+++ b/css/rules.css
@@ -9,7 +9,7 @@ body{
     margin-left: 10vw;
    
     margin-top:10vh ;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.9)),url(../images/moneyheist.jpg);
+    background-image: linear-gradient(rgba(7 7 7/20%),rgba(55 7 7/90%)),url(../images/stranger.jpeg);
     background-repeat: no-repeat;
     background-size :80vw;
     background-position: top;
