--- a/css/style1.css
+++ b/css/style1.css
@@ -19,13 +19,18 @@ nav{
     background-color:rgb(16, 15, 15);
 }
 .navbar{
-    padding-top:3rem;
+    padding-top:4rem;
     padding-bottom: 3rem;
 }
 .nav-item{
     font-family: 'Barlow Semi Condensed';
     font-weight: bold;
     font-size: x-large;
+}
+.nav-item:hover{
+    background-color: #201f1f;
+    border-radius: 7px;
+    
 }
 .collapse{
 
@@ -168,7 +173,8 @@ nav{
     
 
 #friends{
-    background-image: url("../images/Friends.jpg");
+    background-image: url("../images/friends.jpg");
+    background-position: cover;
     
 
 }
@@ -178,7 +184,7 @@ nav{
 
 }
 #family_man{
-    background-image: url("../images/family man.jpg");
+    background-image: url("../images/familyman.jpg");
     
 
 }
@@ -211,13 +217,72 @@ nav{
 
 
 .btn{
-    background-image: linear-gradient(to bottom right, rgb(28, 15, 15), rgb(250, 250, 237));
+    background-image: linear-gradient(to right bottom, rgb(84 5 5), rgb(204 125 125));
     border-radius: 15px;
     position: absolute;
     top:8rem;
     margin-left: 4rem;
+    font-size: large;
+    font-weight: bold;
+}
+.btn:hover{
+    width: 6em;
+    height: 2.5em;
+}
+/* facts css */
+
+.fact-carousel{
+    color:#ffff;
+    
     
 }
+.car-img{
+    margin:5rem 0 0 6rem;
+    height:16rem;
+    width:20rem
+}
+.car-content{
+    height: 17rem;
+    width:45rem;
+    padding: 0rem 5rem 5rem 0rem;
+    font-size: 1.3em;
+    line-height: 1.8;
+
+} 
+/* .quotes{
+    font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    text-align: center;
+    font-size:20rem;
+    
+} */
+
+
+.facts{
+    height: 28rem;
+    background-size: cover;
+    background-image:url("../images/car-backf2.png");
+
+}
+ 
+
+.fact-head{
+    margin:3.5em 0 1.5rem 0;
+}
+
+/* @media only screen and (max-width:1010px){
+    .carousel-item{
+        height: fit-content;
+        text-align: center;
+    }
+     
+    .car-content{
+        margin: auto;
+    }
+
+} */
+
+
 /* footer css */
 footer{
     margin-top: 5em;
@@ -232,7 +297,7 @@ footer .pages{
 
 footer .pages h3{
     color:rgb(249, 246, 246);
-    font-size:20px;
+    font-size:1.5em;
     font-family:Arial, Helvetica, sans-serif;
     padding:5px;
 }
@@ -241,7 +306,7 @@ footer .pages a{
     text-decoration:none;
     margin:1.5%;
     color:#f8f2f2;
-    font-size:15px;
+    font-size:1em;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -256,7 +321,7 @@ footer .doc{
 
 footer .doc h3{
     color:rgb(248, 248, 248);
-    font-size:10px;
+    font-size:1.5em;
     font-family:Arial, Helvetica, sans-serif;
     padding:3px;
 }
@@ -265,7 +330,7 @@ footer .doc a{
     text-decoration:none;
     margin:1.5%;
     color:#f2f9f6;
-    font-size:10px;
+    font-size:1em;
     font-family:Arial, Helvetica, sans-serif;
 }
 
