--- a/css/template_quiz.css
+++ b/css/template_quiz.css
@@ -1,44 +1,70 @@
 body{
     background-image: linear-gradient(to right,rgb(113, 11, 239),rgb(187, 36, 126));
+    
 }
 .ques{
     background-color: rgb(227, 227, 241);
     border-radius:10px;
     border:2px solid rgb(227, 227, 241);
-    margin-top: 5rem;
-    margin-left:16rem;
-    height:10rem;
-    width:48rem;
+    /* margin-top: 5rem; */
+    /* margin-left:16rem; */
+    height:7rem;
+    width:52rem;
+    display: flex;
 }
 .circle1{
     border-radius: 50%;
-    height: 12rem;
-    width:12rem;
+    height: 9rem;
+    width:9rem;
     margin-left: 1rem;
     margin-top:-17px;
+    display: inline-block;
     background-image: linear-gradient(to right,rgb(113, 11, 239),rgb(187, 36, 126));
     border:2px solid rgb(227, 227, 241);
 }
 .cirq{
     border-radius: 50%;
-    height: 11rem;
-    width:11rem;
+    height: 8rem;
+    width:8rem;
     margin-left:5px;
     margin-top:5px;
     background-color: rgb(227, 227, 241);
     border:2px solid rgb(227, 227, 241);
 }
+.qns{
+    font-size: 25px;
+    width:30rem;
+    margin-top: 2rem;
+    /* float: right; */
+}
 .ab{
     display: flex;
 }
 .op1{
+    display:flex;
     background-color: rgb(227, 227, 241);
     border-radius:10px;
     border:2px solid rgb(227, 227, 241);
-    margin-top: 5rem;
-    margin-left:12rem;
+     /* margin-right:3rem;
+     margin-top:2rem;
+     margin-bottom:2rem; */
     height:4rem;
     width:14rem;
+}
+.options{
+    margin-top:8px;
+    font-size:20px;
+}
+.mygrid{
+    margin-top:3rem;
+    /* margin-left:16rem; */
+    width:52rem;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 30%;
+    column-gap: 25% ;
+    /* justify-content: space-evenly; */
 }
 .cir1{
     border-radius: 50%;
@@ -58,7 +84,14 @@ body{
     background-color: rgb(227, 227, 241);
     border:2px solid rgb(227, 227, 241);
 }
-.op2{
+.container-full{
+    height:25rem;
+    margin-bottom:2rem;
+    width:54rem;
+    margin: auto;
+    
+}
+/* .op2{
     background-color: rgb(227, 227, 241);
     border-radius:10px;
     border:2px solid rgb(227, 227, 241);
@@ -87,7 +120,7 @@ body{
     margin-left:28rem;
     height:4rem;
     width:14rem;
-}
+} */
 
 .button1{
       height: 3rem;
