--- a/css/style1.css
+++ b/css/style1.css
@@ -173,28 +173,28 @@ nav{
     
 
 #friends{
-    background-image: url("../images/friends.jpg");
+    background-image: url("../images/pataalook.jpg");
     background-position: cover;
     
 
 }
 #office{
-    background-image: url("../images/office.jpg");
+    background-image: url("../images/titanic.jpg");
     
 
 }
 #family_man{
-    background-image: url("../images/familyman.jpg");
+    background-image: url("../images/spiderman.jpg");
     
 
 }
 #money{
-    background-image: url("../images/moneyheist.jpg");
+    background-image: url("../images/money_heist.jpg");
     
 
 }
 #avatar{
-    background-image: url("../images/avatar2.jpg");
+    background-image: url("../images/stranger.jpeg");
     
 
 }
@@ -209,7 +209,7 @@ nav{
 
 }
 #Big-bang{
-    background-image: url("../images/avatar2.jpg");
+    background-image: url("../images/sacredgames.jpg");
     
 
 }
