--- a/css/rank.css
+++ b/css/rank.css
@@ -46,7 +46,7 @@ nav{
     width:50rem;
     margin:auto;
     margin-top: 3rem;
-    background-image:linear-gradient(to bottom right, rgb(105 9 157), rgb(134 7 89));
+    /* background-image:linear-gradient(to bottom right, rgb(105 9 157), rgb(134 7 89)); */
     
 }
 
@@ -113,20 +113,20 @@ nav{
     height: 6rem;
     width:6rem;
     border: 4px solid rgba(74, 5, 5, 0.345);
-    /* margin-top: 2rem; */
+     margin-top: 2rem; 
 
 }
-#thirdround{
+     #thirdround{
     
     height:12rem;
     width:12rem;
     border-radius:50% ;
     /* position:relative; */
-    background-color:rgb(240, 240, 240,0.2);
+    /* background-color:rgb(240, 240, 240,0.2); */
     
-}
+     }
 
-.prize1{
+ .prize1{
     text-align: center;
     font-size: 30px;
     color: goldenrod;
@@ -140,15 +140,15 @@ nav{
     text-align: center;
     font-size: 17px;
     color: #3c1717;;
-}
+} 
 .award{
     border-radius: 2rem;
-    background-image: linear-gradient(to bottom right,rgb(202, 19, 110),rgb(220, 76, 184));
-}
+    background-image: linear-gradient(to bottom right,rgb(202, 19, 110),rgb(220, 76, 184)); */
+} 
 
 .otherplayer{
     /* border:2px solid white ; */
-    background-image:linear-gradient(to bottom right, rgb(160 39 226), rgb(134 7 89));
+    background-image:linear-gradient(to bottom right, rgb(160 39 226), rgb(134 7 89)); 
     border-radius: 20px;
     width:40rem;
     margin:2rem auto 2rem auto;
@@ -165,16 +165,25 @@ nav{
 
 .first{
     position:relative;
+    width:5rem;
+    height:4rem;
     bottom:75rem;
-    left:10rem;
+    left:11rem;
 }
 .second{
     position:relative;
+    width:5rem;
+    height:4rem;
     bottom:70rem;
     left:6rem;
 }
 .third{
     position:relative;
+    width:5rem;
+    height:4rem;
     bottom:65rem;
-    left:4rem;
+    left:1rem;
 }
+
+
+  
